p2ws_package/Devpp2ws-Package/objects/Crew_Appraisal_Form_Criteria__mdt.object
<CustomObject>
    <fields>
        <fullName>Evaluated_Rank__c</fullName>
        <label>Evaluated Rank</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Evaluator_Rank__c</fullName>
        <label>Evaluator Rank</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Numbers__c</fullName>
        <label>Form Numbers</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>Crew Appraisal Form Criteria</label>
    <pluralLabel>Crew Appraisal Form Criterias</pluralLabel>
</CustomObject>